--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
     "angular-in-memory-web-api": "^0.6.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.5.4",
     "d3": "^5.5.0",
     "rxjs": "^6.0.0",
