--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/cdk": "^6.3.2",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
+    "@angular/material": "^6.3.2",
     "@types/d3": "^5.0.0",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
