--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start-dpl": "ng serve --prod --host 0.0.0.0 --disable-host-check",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,48 +12,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.3",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
-    "@ng-bootstrap/ng-bootstrap": "^2.2.0",
-    "angular-in-memory-web-api": "^0.6.0",
-    "bootstrap": "^4.0.0-alpha.6",
-    "core-js": "^2.5.4",
-    "d3": "^5.5.0",
-    "rxjs": "^6.0.0",
+    "@angular/animations": "^7.2.13",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.13",
+    "@angular/forms": "^7.2.13",
+    "@angular/http": "^7.2.13",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/router": "^7.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+    "angular-in-memory-web-api": "^0.8.0",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.0.1",
+    "d3": "^5.9.2",
+    "d3-ng2-service": "^2.2.0",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.14.7",
+    "rxjs": "^6.4.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cdk": "^6.3.2",
-    "@angular/cli": "~6.0.8",
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular/language-service": "^6.0.3",
-    "@angular/material": "^6.3.2",
-    "@types/d3": "^5.0.0",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/jest": "^23.1.4",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
-    "jasmine-core": "~2.99.1",
+    "@angular-devkit/build-angular": "~0.13.8",
+    "@angular/cdk": "^7.3.7",
+    "@angular/cli": "~7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.13",
+    "@angular/material": "^7.3.7",
+    "@types/d3": "^5.7.2",
+    "@types/jasmine": "~3.3.12",
+    "@types/jasminewd2": "~2.0.6",
+    "@types/jest": "^24.0.11",
+    "@types/node": "~11.13.4",
+    "codelyzer": "~5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "jest": "^23.2.0",
+    "jest": "^24.7.1",
     "json-loader": "^0.5.7",
-    "karma": "~1.7.1",
+    "karma": "~4.0.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.3.0",
-    "ts-node": "~5.0.1",
-    "tslint": "~5.9.1",
-    "typescript": "~2.7.2"
+    "karma-coverage-istanbul-reporter": "~2.0.5",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "~5.4.2",
+    "ts-node": "~8.0.3",
+    "tslint": "~5.15.0",
+    "typescript": "^3.2.4"
   }
 }
